<resources>
    <string name="app_name">Video Call</string>
    <string name="video_calling_application">Video Calling Application</string>
    <string name="user_image_logo">user Image logo</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="don_t_have_account_register">Don\'t have account, Register?</string>
    <string name="send_otp">Send OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="enter_the_otp_sent_on">Enter the OTP sent on</string>
    <string name="dummyNumber">123456789</string>
    <string name="name">User Name</string>
    <string name="enter_credentials">Enter Credentials</string>
    <string name="email">Email</string>
    <string name="next">Next</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">userName</string>
</resources>