<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:background="@color/white"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/anim_dimension"
                android:layout_height="@dimen/anim_dimension"
                android:contentDescription="@string/user_image_logo"
                android:padding="@dimen/padding_medium"
                android:src="@drawable/user" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_shape"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_medium"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:text="@string/sign_in"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_phone_number"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="@dimen/margin_medium"
                android:background="@color/transparent"
                android:hint="@string/phone_number"
                android:textColorHint="@color/black"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/phone_icon"
                    android:drawablePadding="@dimen/padding_medium"
                    android:inputType="phone"
                    android:background="@drawable/edit_text_shape"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textStyle="bold" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="@dimen/margin_medium"
                android:background="@color/transparent"
                android:hint="@string/password"
                android:textColorHint="@color/black"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/baseline_password_24"
                    android:drawablePadding="@dimen/padding_medium"
                    android:background="@drawable/edit_text_shape"
                    android:inputType="textPersonName|textPassword"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginEnd="@dimen/margin_medium"
                android:gravity="end">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="1dp"
                    android:layout_toStartOf="@id/tv_forgotPassword"
                    android:padding="@dimen/padding_medium"
                    android:src="@drawable/lock_icon" />

                <TextView
                    android:id="@+id/tv_forgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_medium"
                    android:text="@string/forgot_password"
                    android:textColor="@color/white" />
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="@dimen/margin_medium"
                android:background="@drawable/button_sign_in_background"
                android:elevation="10dp"
                android:text="@string/sign_in"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="@dimen/margin_medium"
                android:background="@drawable/register_button_background"
                android:elevation="10dp"
                android:text="@string/register"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="@dimen/margin_medium"
                android:gravity="center"
                android:text="@string/don_t_have_account_register"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>
</layout>