<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ProfileFragments">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_profileImage"
                android:layout_width="@dimen/anim_dimension"
                android:layout_height="@dimen/anim_dimension"
                android:src="@drawable/usr_info" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:background="@drawable/background_shape">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_medium"
                    android:background="@drawable/edit_text_shape"
                    android:drawablePadding="@dimen/padding_medium"
                    android:padding="@dimen/padding_large"
                    android:text="@string/username"
                    android:textSize="@dimen/text_size_medium"
                    app:drawableStartCompat="@drawable/person_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_medium"
                    android:background="@drawable/edit_text_shape"
                    android:drawablePadding="@dimen/padding_medium"
                    android:padding="@dimen/padding_large"
                    android:text="@string/email"
                    android:textSize="@dimen/text_size_medium"
                    app:drawableStartCompat="@drawable/email_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_userName" />

                <TextView
                    android:id="@+id/tv_phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_medium"
                    android:background="@drawable/edit_text_shape"
                    android:drawablePadding="@dimen/padding_medium"
                    android:padding="@dimen/padding_large"
                    android:text="@string/phone_number"
                    android:textSize="@dimen/text_size_medium"
                    app:drawableStartCompat="@drawable/phone_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_email" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

    </LinearLayout>

</FrameLayout>